syntax = "proto3";

package hfcms.users.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/hi20160616/hfcms-users/api/users/v1;v1";

service DepartmentsService {
  rpc ListDepartments(ListDepartmentsRequest) returns (ListDepartmentsResponse) {
    option (google.api.http) = {
      get: "/v1/departments"
    };
  }
  rpc GetDepartment(GetDepartmentRequest) returns (Department) {
    option (google.api.http) = {
      get: "/v1/{name=departments/*}"
    };
  }
  rpc CreateDepartment(CreateDepartmentRequest) returns (Department) {
    option (google.api.http) = {
      post: "/v1/departments"
      body: "department"
    };
  }
  rpc UpdateDepartment(UpdateDepartmentRequest) returns (Department) {
    option (google.api.http) = {
      patch: "/v1/{department.name=departments/*/update}"
      body: "department"
    };
  }
  rpc DeleteDepartment(DeleteDepartmentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=departments/*/delete}"
    };
  }
}

message ListDepartmentsRequest {
  // The parent resource name
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListDepartmentsResponse {
  repeated Department departments = 1;
  string next_page_token = 2;
}

message GetDepartmentRequest {
  string name = 1;
}

message CreateDepartmentRequest {
  string name = 1;
  Department department = 2;
}

message UpdateDepartmentRequest {
  Department department = 1;
}

message DeleteDepartmentRequest {
  string name = 1;
}

message Department{
  string name = 1;
  int32 department_id = 2;
  int32 parent_id = 3;
  string department_code = 4;
  string department_name = 5;
  string description = 6;
  int32 state = 7;
  int32 deleted = 8;
  google.protobuf.Timestamp update_time = 9;
}
